style: fix connect page weird cut off footer

--- a/src/app.css
+++ b/src/app.css
@@ -175,4 +175,8 @@
   .shape-crisp {
     shape-rendering: crispEdges;
   }
+
+  .items-start-safe {
+    align-items: safe start;
+  }
 }
